:sparkles: [develop] Fix custom teleport cards content paddings and improve grid alignment

--- a/assets/css/base/_index.scss
+++ b/assets/css/base/_index.scss
@@ -15,3 +15,8 @@ a {
     position: relative;
     z-index: 1005;
 }
+
+#custom-teleports {
+    position: relative;
+    z-index: 1000;
+}
