--- a/assets/css/variables/_layout.scss
+++ b/assets/css/variables/_layout.scss
@@ -8,6 +8,6 @@ $pad-desktop-s: 32px;
 $pad-desktop-m: 34px;
 $pad-desktop-l: 48px;
 //
-$grid-gap: 1rem;
+$grid-gap: 1.5rem;
 
 $header-padding: 1.875rem;
